fixed small-text overlap

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -594,6 +594,7 @@ footer {
 .small-text {
 	font-size: 14px;
 	color: $medium-grey;
+	margin: 0.1em;
 }
 
 .input-wrapper {
